第二次提交,修改了grade的样式

--- a/切换查看.html
+++ b/切换查看.html
@@ -44,8 +44,8 @@
 
         },
         data:{
-            layout:'list',
-            show:true,
+            layout:'grade',
+            show:false,
             array:[
                 {
                 "title": "What You Need To Know About CSS Variables",
